# rust_template

./: .gitignore  Cargo.toml  README.md  log4rs.yml
src/: env_logger.rs  lib.rs  log4rs.rs  log4rs_example.rs  main.rs
